# LogTool

./: CMakeLists.txt  README.md
src/: Compression.cpp  Compression.h  DataStructs.cpp  DataStructs.h  DirectoryData.cpp  DirectoryData.h  main.cpp
